# eter

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  AI-GUIDELINES.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GETTING_STARTED.md  README.md  TODO.md  test5.eter  test6.eter
.githooks/: pre-commit  pre-push
.github/workflows/: apple-silicon.yml  apple-x86.yml  arch-x86.yml  debian-x86.yml  deploy-docs.yml  fedora-x86.yml  opensuse-x86.yml  ubuntu-aarch64.yml  ubuntu-x86.yml
docs/: CONTRIBUTING.md  Doxyfile.in  GETTING_STARTED.md  LANGUAGE_SPECIFICATION.md  MOTIVATION.md  README.md  book.toml
docs/CI/: README.md  testing-local.md
docs/EXAMPLES/APPLE-METAL/: GetGPU.cpp  Kernels.metal  Makefile  README.md  ShaderAOT.cpp  ShaderJIT.cpp
docs/EXAMPLES/MLIR-FAT-BINARY/: README.md  emit-fat-binary.sh  matmul-cpu-driver.mlir
docs/LOGO/: logo.tex
docs/MOTIVATION/: TABLE.md
docs/ci/: testing-local.md
docs/eter/: README.md  mkdocs.yml  requirements.txt
docs/eter/src/: SUMMARY.md  items.md  lexical-structure.md  statements-and-expressions.md
docs/examples/mlir-fat-binary/: README.md  matmul-fat-binary.mlir  run-validate.sh
docs/motivation/: TECHNICAL_REPORT.md
docs/src/: SUMMARY.md  introduction.md  items.md  lexical-structure.md  memory-model.md  namespaces.md  qualifiers.md  statements-and-expressions.md  type-system.md  unsafety.md
docsrc/: doxygen-mainpage.dox
docsrc/ci/: README.md
docsrc/examples/apple-metal/: README.md  ShaderJIT.cpp
docsrc/examples/eter-semantics/: from-let.et  from-mut.et
docsrc/examples/mlir-fat-binary/: .gitignore  README.md
include/eter/Base/: Debug.h  DiagnosticEngine.h  SourceBuffer.h  SourceManager.h  Span.h
include/eter/Basic/: Version.h
include/eter/Driver/: Driver.h  DumpTokens.h  Version.h
include/eter/Lexer/: Lexer.h  LexerErrors.def  Token.h  TokenKinds.def
lib/: CMakeLists.txt
lib/Base/: CMakeLists.txt  Debug.cpp  DiagnosticEngine.cpp  SourceBuffer.cpp  SourceManager.cpp
lib/Basic/: Version.cpp
lib/Driver/: CMakeLists.txt  Driver.cpp  Version.cpp
lib/Lexer/: CMakeLists.txt  Lexer.cpp  Token.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Driver/: help.smoke  lit.local.cfg  version.smoke
test/Lexer/: basic.et  lit.local.cfg
test/Smoke/: version.smoke
tools/: CMakeLists.txt
tools/eter/: CMakeLists.txt  eter.cpp
unittests/: CMakeLists.txt
unittests/Base/: CMakeLists.txt  DiagnosticEngineTest.cpp  SourceBufferTest.cpp  SourceManagerTest.cpp  SpanTest.cpp
unittests/Driver/: CMakeLists.txt  DriverTest.cpp  VersionTest.cpp
unittests/Lexer/: CMakeLists.txt  LexerTest.cpp
